--- a/gradle.properties
+++ b/gradle.properties
@@ -32,7 +32,7 @@ mod_name=Better Elevators Mod
 # The license of the mod. Review your options at https://choosealicense.com/. All Rights Reserved is the default.
 mod_license=All Rights Reserved
 # The mod version. See https://semver.org/
-mod_version=0.1
+mod_version=0.3
 # The group ID for the mod. It is only important when publishing as an artifact to a Maven repository.
 # This should match the base package used for the mod sources.
 # See https://maven.apache.org/guides/mini/guide-naming-conventions.html
@@ -40,4 +40,4 @@ mod_group_id=com.hnp_arda.betterelevatorsmod
 # The authors of the mod. This is a simple text string that is used for display purposes in the mod list.
 mod_authors=HNP Arda
 # The description of the mod. This is a simple multiline text string that is used for display purposes in the mod list.
-mod_description=Example mod description.\nNewline characters can be used and will be replaced properly.
+mod_description=Better Elevators Mod.\nBetter Elevators lets you build real Elevators with moving Cabins. You can open the UI when getting in to choose the floor, add upgrades, add block covers, and more!
